feat(platform-api): add lang and translationSlug to posts with same-lang adjacent
